compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_coerce_ref_arg_string_any.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "procedure p(var a : string(*)) end p\nvar c : string\np(c)\n"
---
"p"@(FileId(1), 10..11) [Subprogram(Procedure)]: procedure ( pass(var ref) string_n Any, ) -> void
"a"@(FileId(1), 16..17) [Param(Reference(Var), No)]: string_n Any
"c"@(FileId(1), 41..42) [ConstVar(Var, No)]: string
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

