compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_coerce_ref_arg_string_any_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "procedure p(var a : string(*)) end p\nvar c : char\np(c)\n"
---
"p"@(FileId(1), 10..11) [Subprogram(Procedure)]: procedure ( pass(var ref) string_n Any, ) -> void
"a"@(FileId(1), 16..17) [Param(Reference(Var), No)]: string_n Any
"c"@(FileId(1), 41..42) [ConstVar(Var, No)]: char
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 52..53: mismatched types
| note in file FileId(1) for 52..53: this is of type `char`
| note in file FileId(1) for 52..53: parameter expects type `string(*)`
| info: `char` is not equivalent to `string(*)`
