compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_coerce_value_arg.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "procedure p(a : real) end p\nvar i : int\np(i)\n"
---
"p"@"src/main.t:10..11" [Subprogram(Procedure)]: procedure ( pass(value) real, ) -> void
"a"@"src/main.t:12..13" [Param(Value, No)]: real
"i"@"src/main.t:32..33" [ConstVar(Var, No)]: int
"<unnamed>"@"<unknown>:0..0" [Undeclared]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
