compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_on_type_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type kall : procedure() kall"
---
"kall"@(FileId(1), 5..9) [Type]: alias[DefId(LibraryId(0), LocalDefId(0))] of procedure ( ) -> void
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 24..28: cannot use `kall` as a statement
| error in file FileId(1) for 24..28: `kall` is not a statement
