compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_on_var_err.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var sha : int sha()"
---
"sha"@"src/main.t:4..7" [ConstVar(Var, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:14..17: cannot call or subscript `sha`
| note for src/main.t:14..17: this is of type `int`
| error for src/main.t:14..17: `int` is not callable
