compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_wrong_arg_all_err.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "procedure k(var j : int) end p\nk(all)\n"
---
"k"@(FileId(1), 10..11) [Subprogram(Procedure)]: procedure ( pass(var ref) int, ) -> void
"j"@(FileId(1), 16..17) [Param(Reference(Var), No)]: int
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 33..36): cannot use `all` here
| error for (FileId(1), 33..36): `all` can't be used in subprogram calls
