compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_wrong_arg_range_err.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "procedure k(var j : int) end p\nk(1 .. * - 2)\n"
---
"k"@(FileId(1), 10..11) [Subprogram(Procedure)]: procedure ( pass(var ref) int, ) -> void
"j"@(FileId(1), 16..17) [Param(Reference(Var), No)]: int
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 33..43): cannot use range expression here
| error for (FileId(1), 33..43): range expressions can't be used in subprogram calls
