compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_decl_bare_named_res_use.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "function sha wa : int wa end sha"
---
"sha"@(FileId(1), 9..12) [Subprogram(Function)]: function -> int
"wa"@(FileId(1), 13..15) [Param(Value, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 22..24): cannot use `wa` as a statement
| error for (FileId(1), 22..24): `wa` is not a statement
